<resources>
    <string name="app_name">Boite à outils chy</string>

    <string name="btn_valider">Valider</string>
    <string name="btn_annuler">Annuler</string>
    <string name="btn_date_heure">Saisie date heure</string>
    <string name="btn_retour">Retour</string>

    <string name="act_saisie">Page saisie</string>
    <string name="info_saisie">Pas de texte saisi</string>
    <string name="cons_saisie">Saisir ici votre texte</string>
    <string name="saisie_heure">Saisir l\'heure</string>
    <string name="saisie_date">Saisir la date</string>
</resources>