<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideVert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/boutonSaisie"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
         />
    <Button
        android:id="@+id/boutonSaisie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_saisie"
        android:onClick="saisieText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/saisiDateHeure"
        app:layout_constraintStart_toStartOf="@id/guideVert"

        />
    <TextView
        android:id="@+id/saisieTexte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/info_saisie"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/saisiDateHeure"
        app:layout_constraintStart_toEndOf="@+id/boutonSaisie"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/saisiDateHeure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_date_heure"
        android:onClic="saisieDateHeure"
        app:layout_constraintTop_toBottomOf="@+id/boutonSaisie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideVert"
        />

</androidx.constraintlayout.widget.ConstraintLayout>