<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DateHeure">
    <TextView
        android:id="@+id/consDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saisie_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/affDate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/affHeure"/>
    <TextView
        android:id="@+id/affDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saisieDate"
        app:layout_constraintStart_toEndOf="@id/consDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/affHeure"/>
    <TextView
        android:id="@+id/consHeure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saisie_heure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/affHeure"
        app:layout_constraintTop_toBottomOf="@id/affDate"
        app:layout_constraintBottom_toTopOf="@+id/btRetour"/>
    <TextView
        android:id="@+id/affHeure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onclick="saisieHeure"
        app:layout_constraintStart_toEndOf="@id/consHeure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/affDate"
        app:layout_constraintBottom_toTopOf="@+id/btRetour"/>
    <Button
        android:id="@+id/btRetour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_retour"
        android:onClick="retour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/affHeure"/>

</androidx.constraintlayout.widget.ConstraintLayout>